--- a/css/help.css
+++ b/css/help.css
@@ -13,7 +13,7 @@ main h1 {
 
 main h2, main a {
     color: white;
-    font-family: 'DMSans';
+    font-family: 'DMSans', system-ui, sans-serif;
     font-size: 24px;
     font-weight: 400;
 }
